[package]
name = "vospel-cz-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.18.2" }
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "gzip", "deflate"] }
serde_json = "1.0.81"

[[bin]]
name = "rocket"
path = "src/main.rs"
